k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocery-backend
  namespace: grocery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocery-backend
  template:
    metadata:
      labels:
        app: grocery-backend
    spec:
      containers:
        - name: grocery-backend
          image: hemavarshiniramesh/grocery-backend:latest
          ports:
            - containerPort: 2026
