k8s/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: grocery
spec:
  selector:
    app: mysql-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
