k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: grocery
spec:
  selector:
    app: grocery-backend
  ports:
    - protocol: TCP
      port: 2026
      targetPort: 2026
  type: ClusterIP
