k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: grocery
spec:
  selector:
    app: grocery-frontend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
